--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "element-ui": "^1.4.2",
+    "v-charts": "^1.7.12",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
