Add markdown router and component

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
+    "mavon-editor": "^2.2.6",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.3",
