--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
-    "vue-image-crop-upload": "^2.0.7",
+    "vue-cropper": "^0.2.9",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
