--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "element-ui": "^1.4.2",
     "v-charts": "^1.7.12",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
